# amazon-photos-mcp

./: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml
amazon_photos_mcp/: __init__.py  api.py  client.py  config.py  crypto.py  decorators.py  errors.py  logging.py  phash.py  prompts.py  rate_limiter.py  resources.py  server.py  utils.py
amazon_photos_mcp/tools/: __init__.py  albums.py  connection.py  duplicates.py  favorites_hidden.py  folders.py  library.py  media.py  people.py  search.py  storage.py  trash.py  upload.py  vision.py
docs/CODEMAPS/: INDEX.md  backend.md  database.md  frontend.md  integrations.md  workers.md
docs/superpowers/plans/: 2026-06-05-review-recommendations.md
scripts/: auth_wizard.py  get_cookies.ps1  get_cookies.py  get_cookies_easy.py
tests/: conftest.py  test_duplicates_new.py  test_fixes.py  test_integration.py  test_media_new.py  test_search_new.py  test_tools.py  test_utils.py
tests/smoke/: conftest.py  test_inspector.py
