[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-photos-mcp"
version = "0.3.1"
description = "MCP server for Amazon Photos — search, browse, upload, download, and manage your photo library"
requires-python = ">=3.10.10"
authors = [
    { name = "Matt Whitt", email = "james.matthew.whitt@gmail.com" },
]
license = { text = "MIT" }
keywords = ["amazon-photos", "mcp", "fastmcp", "claude", "photo-management"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "cryptography>=42.0.0",
    "fastmcp>=2.0.0,<4",
    "imagehash>=4.3",
    "Pillow>=10.0",
    "orjson>=3.9.0",
    "aiofiles>=23.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    # Removed upstream git dependency: amazon-photos code is now vendored.
    "curl-cffi>=0.7.0,<1.0",
    "pyarrow",
    "pydantic-settings>=2.0",
]

[project.scripts]
amazon-photos-mcp = "amazon_photos_mcp:main"
get-amazon-cookies = "scripts.get_cookies:main"
get-amazon-cookies-easy = "scripts.get_cookies_easy:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "mypy>=1.0",
    "pytest-cov>=4.0",
    "ruff>=0.6.0",
]
scripts = [
    "rookiepy>=0.5.6",
    "playwright>=1.50",
]

[project.urls]
Homepage = "https://github.com/jmattwhitt/amazon-photos-mcp"
Repository = "https://github.com/jmattwhitt/amazon-photos-mcp.git"
Issues = "https://github.com/jmattwhitt/amazon-photos-mcp/issues"



[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["amazon_photos_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
